# takepon7.github.io

./: .dockerignore  .env.appstore.example  .env.production.example  .gitignore  .vercelignore  Dockerfile  KICKOFF.md  PLAN.md  README.md  capacitor.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vercel.json
.hyperframes/: config.json
api/: index.py
docs/: deployment.md
reports/: phase0_gate.md  phase1_api_smoke_heuristic.json  phase1_api_smoke_open_clip.json  phase2_puzzle_pool.md  phase3_static_smoke.json
scripts/: dev_api_heuristic.sh  dev_api_open_clip.sh
tests/: test_api.py  test_appraisal_budget.py  test_backlog_seed_asset_pack.py  test_budget_smoke.py  test_commentary.py  test_competition.py  test_cosmetics.py  test_daily_puzzle_planning.py  test_drawing_verification.py  test_entitlements.py  test_launch_package_audit.py  test_layer2_actors.py  test_moderation.py  test_public_launch.py  test_puzzle.py  test_real_model_pair_coverage.py  test_release_candidate.py  test_release_readiness.py  test_scoring.py  test_season_ops.py  test_seed_assets.py  test_share_card.py  test_validate_production_env.py
tools/: apply_release_candidate.py  archive_ios_testflight.sh  audit_app_store_release.py  audit_launch_package.py  audit_real_model_pair_coverage.py  audit_testflight_review_readiness.py  build_app_store_screenshots.py  build_approved_seed_asset_pack.py  build_ios_assets.py  build_itchio_release_kit.py  build_marketing_share_cards.py  build_phase1_fixtures.py  build_phase2_puzzle_pool.py  build_seed_ghost_pack.py  (+24 more)
(+191 files in other folders)
